fixed scrolling overflow with fixed footer and dynamic narow-content height

--- a/mysite/static/css/kyleboos.css
+++ b/mysite/static/css/kyleboos.css
@@ -1,6 +1,6 @@
 html,
 body {
-	height: 100%;
+	
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -16,7 +16,7 @@ a{
 
 /* Wrapper for page content to push down footer */
 #main-content {
-	min-height: 100%;
+	
 	/*height: auto !important;*/
 	/* Negative indent footer by its height */
 	margin: 0 auto -60px;
@@ -24,8 +24,29 @@ a{
 	padding: 0 0 60px;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+.narrow-content{
+	margin: 0 auto;
+	min-width: 500px;
+	max-width: 800px;
+	padding: 120px 0;
+	width: 50%;
+	height:700px;
+	overflow: auto;
+	
+
+	
+	
+}
+
 #about-content{
 	margin-right: 30%;
+
+	
+	
 }
 
 .about-p{
@@ -45,17 +66,10 @@ a{
 	line-height: 1.1em;
 }
 
-.narrow-content{
-	margin: 0 auto;
-	min-width: 500px;
-	max-width: 800px;
-	padding: 120px 0;
-	width: 50%;
-}
-
 .menu-item{
 	color: #273132;
 	background: rgba(255, 255, 255, 1.0);
+	font-weight:bold;
 }
 
 .menu-item a:hover, a:focus {
@@ -83,7 +97,12 @@ a{
 }
 
 #social-icons{
-	left: 35%;
+	left: 70%;
+	position: relative;
+}
+#social-icons2{
+	bottom: -5px;
+	left: 70%;
 	position: relative;
 }
 
@@ -114,10 +133,11 @@ li{
 
 #tab-container{
 	font-family: 'Raleway', Helvetica, Arial, sans-serif;
+	font-size: 0.9em;
 	bottom: -10px;
 	left: 1%;
-	height: 90%;
-	position: absolute;
+	height: 8%;
+	position: fixed;
 }
 
 
